exclude env files

--- a/.gitignore
+++ b/.gitignore
@@ -147,6 +147,8 @@ dist
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+.env.staging
 
 npm-debug.log*
 yarn-debug.log*
